--- a/index.html
+++ b/index.html
@@ -35,17 +35,19 @@
            <span> $169.99</span>
 
          </div>
-         <button> <i class="fa-regular fa-cart-shopping"></i> Add to Cart</button>
+         <button><i class="fa-solid fa-cart-shopping"></i> Add to Cart</button>
       </article>
     
   </section>
   
   </main>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </footer>
 
   <script src="https://kit.fontawesome.com/da3d12f4f8.js" crossorigin="anonymous"></script>
 </body>
